# TestEngine

./: .gitignore  shader.txt  system.cfg  vcpkg.json
Assets/: loadscreen_default.dds
Assets/Shaders/FX/: Common.cfi  ModificatorVT.cfi  PostProcess.fx  auxgeom.fx  bb.fx  illum.fx  shadeLib.cfi  terrain.fx
Assets/_Shaders/FX/: PostProcess.fx  auxgeom.fx  screen.fx  shadeLib.cfi  terrain.fx
Code/Engine/3DEngine/: 3DEngine.cpp  CMakeLists.txt  MaterialManager.cpp  ObjectManager.cpp  ObjectManager.hpp  StatObject.hpp  pch.hpp
Code/Engine/3DEngine/Assimp/: CGFImporter.cpp
Code/Engine/3DEngine/Assimp/CGF/: CgfUtils.cpp  Import.cpp  Loader.cpp
Code/Engine/3DEngine/Geometry/: StatObj.cpp
Code/Engine/3DEngine/Terrain/: Terrain.cpp  Terrain.h
Code/Engine/Common/BlackBox/: CMakeLists.txt
Code/Engine/Common/BlackBox/Core/: CryCrc32.h  Stream.hpp  smartptr.hpp
Code/Engine/Common/BlackBox/Legacy/: Tarray.h  physinterface.h
Code/Engine/Common/BlackBox/Memory/: CryMemoryManager.h
Code/Engine/Common/BlackBox/Renderer/: Camera.hpp  IRender.hpp  IRenderAuxGeom.hpp  IRenderView.h  IShader.hpp  RendElement.h  VertexFormats.hpp
Code/Engine/Common/BlackBox/ScriptSystem/: ScriptObject.hpp  _ScriptableEx.hpp
Code/Engine/Common/BlackBox/System/: ConsoleRegistration.h  CrySizer.hpp  IStreamEngine.h  IWindow.hpp
Code/Engine/Common/BlackBox/Utils/: Text.hpp
Code/Engine/EntitySystem/: Entity.cpp  EntitySystem.cpp  EntitySystem.hpp  PhysicalEntity.cpp  Physics.cpp  Physics.hpp
Code/Engine/Input/: ActionMapManager.cpp  ActionMapManager.hpp  BaseInput.cpp  InputDevice.cpp  SDLInput.cpp  SDLPad.cpp
Code/Engine/Network/: Network.cpp
Code/Engine/Renderer/: AuxRenderer.cpp  AuxRenderer.hpp  BaseRenderer.cpp  BaseRenderer.hpp  CMakeLists.txt  FreeTypeFont.cpp  FreeTypeFont.hpp  QuadTree.hpp  RenderThread.cpp  RenderThread.h  ShaderMan.cpp  ShaderMan.h  Terrain.cpp  Terrain.h  pch.hpp
Code/Engine/Renderer/Common/: CommonRender.cpp  CommonRender.h  CryNameR.h  Include_HLSL_CPP_Shared.h  crc32.h
Code/Engine/Renderer/D3D/: BufferManager.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.hpp
Code/Engine/Renderer/DeviceManager/: DeviceObjects.cpp  DevicePSO.h
Code/Engine/Renderer/DeviceManager/D3D11/: DevicePSO.cpp  DevicePSO.h
Code/Engine/Renderer/GraphicsPipeline/: RenderView.h
Code/Engine/Renderer/GraphicsPipeline/Common/: GraphicsPipeline.cpp  GraphicsPipeline.h
Code/Engine/Renderer/RenderElements/: RendElement.cpp  RendElements.cpp  Terrain.cpp  Terrain.h
Code/Engine/Renderer/Shaders/: CMakeLists.txt  Driver.cpp  Driver.hpp  Effect.cpp  Effect.hpp  FxParser.cpp  FxParser.h  Parser.cpp  Parser.hpp  Parser.yy  Scanner.cpp  Scanner.hpp  Scanner.ll  ShaderManager.cpp  ShaderManager.hpp
Code/Engine/Renderer/Vulkan/: Shader.cpp  Shader.hpp
Code/Engine/ScriptSystem/: FunctionHandler.cpp  ScriptObject.cpp  ScriptSystem.cpp  ScriptSystem.hpp  pch.hpp
Code/Engine/Sound/: Sound.cpp  SoundSystem.cpp  SoundSystem.hpp
Code/Engine/System/: CMakeLists.txt  Console.cpp  Console.hpp  ConsoleBatchFile.cpp  DownloadManager.cpp  HTTPDownloader.cpp  MemoryManager.cpp  NullLog.cpp  ScriptObjectSystem.cpp  System.cpp  System.hpp  System.inl  SystemCFG.cpp  SystemCFG.hpp  SystemInit.cpp  SystemRender.cpp  SystemThreading.cpp  WindowsConsole.cpp  XConsoleVariable.cpp
Code/Engine/System/File/: CryPak.cpp  CryPak.hpp
Code/Engine/System/Font/: NullFont.h
Code/Engine/System/RemoteConsole/: RemoteConsole.cpp
Code/Engine/System/StreamEngine/: StreamEngine.cpp  StreamEngine.h  StreamReadStream.cpp  StreamReadStream.h
Code/Engine/System/XML/: xml.cpp  xml.h
Code/Engine/Utils/: Utils.cpp
Code/Games/Minecraft/Code/: pch.hpp
Code/Games/Minecraft/Code/Client/: Client.cpp  XClient.cpp  XClientSnapshot.cpp
Code/Games/Minecraft/Code/GameFiles/: CameraController.cpp  Game.cpp  GameClientServer.cpp  GameEvents.cpp  GameMods.cpp  GameTagPoints.cpp  Minecraft.cpp  Minecraft.h  XArea.cpp
Code/Games/Minecraft/Code/GameSystem/: XSystemBase.cpp
Code/Games/Minecraft/Code/Legacy/: Input.hpp
Code/Games/Minecraft/include/: CameraController.hpp
Code/Launcher/WindowsLauncher/: Main.cpp
Code/Tools/RC/ResourceCompiler/: ResourceCompiler.cpp  ZipFileFormat.h  pch.hpp
Engine/Scripts/: common.lua
Engine/Shaders/: CMakeLists.txt
Engine/Shaders/CFX/: FXStreamDefs.fx  ModificatorVT.fx  common.fx
Engine/Shaders/FX/: Common.cfi  FXConstantDefs.cfi  FXSamplerDefs.cfi  FXStreamDefs.cfi  auxgeom.fx  bb.fx  illum.fx  shadow.fx  sprite.fx  terrain.fx  vertexLib.cfi  z.fx
Tools/CMake/: InitialSetup.cmake
Tools/Cmake/: BuildEngine.cmake  PrepareVcpkg.cmake
games/TestRenderer/Code/: TestRenderer.cpp
include/public/BlackBox/Renderer/: IRender.hpp
res/: CMakeLists.txt
src/Engine/Renderer/: BaseRenderer.hpp
src/Engine/Renderer/Vulkan/: Renderer.cpp  Renderer.h
(+23 files in other folders)
